# spitter

./: .SRCINFO  .gitignore  PKGBUILD  README.md  pyproject.toml  spitter  spitter.py  spitter_ws.py
.github/workflows/: ci.yml  drift-detection.yml  release.yml
scripts/: build_release_archive.py
src/spitter/: __init__.py  core.py  websocket.py
tests/: test_spitter.py
