[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spitter"
version = "0.1.1"
description = "Self-documenting Cartesia speech CLI with websocket sessions"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "Morty" }
]
license = "MIT"
keywords = ["cartesia", "tts", "cli", "speech", "websocket"]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Utilities",
]

[project.scripts]
spitter = "spitter.cli:main"

[dependency-groups]
dev = [
  "build>=1.2.2",
  "mypy>=1.18.0",
  "pytest>=8.4.2",
  "ruff>=0.11.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/test_spitter.py" = ["E402"]

[tool.mypy]
python_version = "3.13"
files = ["src/spitter"]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
